--- a/lab-05.Rmd
+++ b/lab-05.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 05 - La Quinta is Spanish for next to Denny's, Pt. 2"
-author: "Insert your name here"
-date: "Insert date here"
+author: "Yiwei Tang"
+date: "2/10/2026"
 output: github_document
 ---
 
