--- a/lab-05.Rmd
+++ b/lab-05.Rmd
@@ -18,10 +18,22 @@ states <- read_csv("data/states.csv")
 
 ### Exercise 1
 
-Remove this text, and add your answer for Exercise 1 here.
-Add code chunks as needed.
-Don't forget to label your code chunk.
-Do not use spaces in code chunk labels.
+There are three Denny's locations in Alaska.
+
+```{r filter_dennys_AK}
+dn_ak <- dennys %>%
+  filter(state == "AK")
+nrow(dn_ak)
+```
+
+There are two La Quinta locations in Alaska.
+
+```{r filter_lq_AK}
+lq_ak <- laquinta %>%
+  filter(state == "AK")
+nrow(lq_ak)
+```
+
 
 ### Exercise 2
 
