Added answers for Ex 2

--- a/lab-05.Rmd
+++ b/lab-05.Rmd
@@ -34,13 +34,13 @@ lq_ak <- laquinta %>%
 nrow(lq_ak)
 ```
 
-
 ### Exercise 2
 
-Remove this text, and add your answer for Exercise 1 here.
-Add code chunks as needed.
-Don't forget to label your code chunk.
-Do not use spaces in code chunk labels.
+We need to calculate six locations between the two La Quintas and the three Denny's.
+
+```{r calc_pair}
+pair <- nrow(lq_ak) * nrow(dn_ak)
+```
 
 ### Exercise 3
 
